# weba

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .sourcery.yaml  .tool-versions  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yaml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  tailwind.config.js  tox.ini
.devcontainer/: devcontainer.json
.github/: release.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: examples.md  index.md  modules.md
docs/examples/: component.md  ui.md
example/: main.py
example/forms/: login_form.py
example/layouts/: __init__.py  base_layout.py
example/pages/: hello.py
examples/component/: index.html
examples/ui/: index.html
modules/: index.html
search/: search_index.json
tests/: button.html  conftest.py  form.html  layout.html  layout_append_prepend.html  server.py  test_component.py  test_foo.py  test_hello_world.py  test_lxml_parser.py  test_tag.py  test_ui.py
tests/weba/: test_run.py
weba/: __init__.py  app.py  base_page.py  build.py  component.py  context.py  document.py  env.py  errors.py  middleware.py  settings.py  tag.py  tag.pyi  tag_decorator.py  tags.py  ui.py  utils.py  weba.py
weba/base/: component.py  page.py
weba/components/: browser.py
weba/middleware/: __init__.py  csrf.py  weba.py
weba/pages/: 500.py
